bootstrap/base/cluster-prometheus/prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-k8s-tls
  labels:
    prometheus: federated-prometheus
  name: prometheus-k8s
spec:
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: federated-prometheus
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: "600s"
    openshift.io/host.generated: "true"
  labels:
    app: federated-prometheus
  name: prometheus
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: prometheus-k8s
    weight: 100
  wildcardPolicy: None
